# weaviate-challenge

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  __init__.py  backfill.py  docker-compose-test.yml  docker-compose-weaviate.yml  docker-compose.yml  init.sh  load_weaviate.py  main.py  pyproject.toml  rabbitmq.dockerfile  settings.py  stream_processor.dockerfile  test_queue.py  wait-mq.sh
crawlers/: __init__.py  base.py  coin_telegraph.py  telegram.py
data_augmentation/: data_formatter.py  openai_handler.py
data_handlers/: chunk_handler.py  handlers.py
frontend/app/: globals.css  page.js
frontend/app/components/: Search.js
llm_components/: prompt_templates.py
models/: chunk.py  clean.py  documents.py
notebooks/: data_extraction.ipynb  dataset_preparation.ipynb  rag.ipynb
rag/: qa_context.py  query_expansion.py  query_meta_extractor.py  retriever.py
session_data/: my_user.session
utils/: __init__.py  embeddings.py
